--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
+    "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.45",
+]
