--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,20 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "accelerate>=1.12.0",
+    "aiogram>=3.23.0",
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
+    "huggingface-hub>=0.36.0",
+    "langchain>=1.1.3",
+    "langchain-community>=0.4.1",
+    "llama-cpp-python>=0.3.16",
+    "pandas>=2.3.3",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.45",
+    "sqlalchemy-utils>=0.42.1",
+    "sqlglot>=28.3.0",
+    "sqlparse>=0.5.4",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
 ]
