Fix: DockerFile and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,35 +7,46 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-analytic}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-analytic}"]
       interval: 5s
       timeout: 5s
       retries: 5
     ports:
-      - "5432:5432"  
+      - "5432:5432"
+
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    volumes:
+      - ollama_data:/root/.ollama
+    ports:
+      - "11434:11434"
+    environment:
+      - OLLAMA_KEEP_ALIVE=24h
+    command: serve
+    restart: unless-stopped
+    deploy:
+      resources:
+        reservations:
+          memory: 8G
 
   app:
     build: .
     depends_on:
       db:
         condition: service_healthy
+      ollama:
+        condition: service_started
     environment:
       DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-analytic}"
       TELEGRAM_TOKEN: ${TELEGRAM_TOKEN}
-      MODEL_PATH: "/app/models/mistral-7b-instruct-v0.1.Q4_K_M.gguf"
+      OLLAMA_BASE_URL: http://ollama:11434
+      LLM_MODEL: ${LLM_MODEL:-llama3}
     volumes:
-      - ./models:/app/models:ro 
-      - ./data:/app/data:rw 
+      - ./data:/app/data:rw
     restart: unless-stopped
     command: ["python", "bot.py"]
-    deploy:
-      resources:
-        limits:
-          memory: 8G
-        reservations:
-          memory: 4G
 
   loader:
     build: .
@@ -45,9 +56,10 @@ services:
     environment:
       DATABASE_URL: "postgresql+asyncpg://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@db:5432/${POSTGRES_DB:-analytic}"
     volumes:
-      - ./data:/app/data:ro 
+      - ./data:/app/data:ro
     command: ["python", "load_data.py"]
     restart: 'no'
 
 volumes:
   postgres_data:
+  ollama_data:
